--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -173,6 +173,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- End of report area -->
                             <div class="modal-footer">
                                 <button type="button" ng-click="close()" class="btn btn-default" data-dismiss="modal">Close</button>
                             </div>
