Small edit to about page

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -3,7 +3,8 @@
 <div class="container" id="jumbo">
     <div class="jumbotron" id="info">
         <h1>Pettts.com</h1>
-        <p class="pa">Your Perfect Place where you can Buy , Sell , Shelter , Mate , Exchange , Find your Lost pet And Other things related to pets world </p>
+        <h2><strong>Pets</strong> and <strong>T</strong>heir <strong>T</strong>hings</h2>
+        <p class="pa">Your Perfect Place where you can Buy, Sell, Shelter, Mate, Exchange, Find your Lost pet And Other things related to pets world</p>
         <p><a class="btn btn-success" href="/posts" role="button"><i class="fa fa-sign-in"></i> Get Started</a></p>
     </div>
 </div>
