--- a/public/views/filter.html
+++ b/public/views/filter.html
@@ -63,7 +63,7 @@
 
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                <h4>We are sorry, you must be logged in to view it more</h4>
+                                <h4>We are sorry, you must be logged in to view more</h4>
                             </div>
 
                             <div class="modal-body">
@@ -95,7 +95,7 @@
                         <div class="modal-content">
 
                             <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <button type="button" ng-click="close()" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                                 <h4>{{ post.type | stringifyType }}</h4>
                             </div>
 
