--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -87,9 +87,16 @@
                                 <a id="new-btn" ng-if="myProfile" href="/post/new" class="btn btn-primary">Create a new post!</a>
                             </div>
                             <div ng-if="!posts">
-                                <h3>
-                                    This user has no posts yet.
-                                </h3>
+                                <div ng-if="admin">
+                                    <h3>
+                                        There are no reported posts.
+                                    </h3>
+                                </div>
+                                <div ng-if="!admin">
+                                    <h3>
+                                        This user has no posts yet.
+                                    </h3>
+                                </div>
                             </div>
                             <hr>
                             <div ng-if="posts">
@@ -113,8 +120,9 @@
                                                     <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
                                                     <!-- display post date -->
                                                     <p><small><em>{{ post.date | date }}</em></small></p>
-                                                    <!-- fixing description length to display by 250 chars -->
-                                                    <p style="word-break: break-all; hyphens: auto;">{{ post.description.slice(0,250) }}...</p>
+                                                    <!-- viewing only species and kind of animal -->
+                                                    <p><strong>Species: </strong>{{post.species}}</p>
+                                                    <p><strong>Kind: </strong>{{post.kind}}</p>
                                                     <!-- link to show post page -->
 
                                                     <button type="button" ng-if="myProfile" ng-click="deletePost(post._id)" class="btn btn-danger" id="delete-btn">Delete</button>
